Don't allow to perform castling if the non-moved rook was already captured and its position is occupied by another piece.

BUG: 430403
FIXED-IN: 22.08